# cpp-slicer

./: .clang-format  CMakeLists.txt  Readme.md
include/: pdg.h  pdgBuilder.h  pdgBuilderAction.h
src/: main.cpp  pdg.cpp  pdgBuilder.cpp  pdgBuilderAction.cpp
